--- a/main.html
+++ b/main.html
@@ -9,8 +9,19 @@
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
-</script>
+	</script>
 
+	<header>
+		<nav>
+			<a href="http://127.0.0.1:3000/Notes/7%20Feb/Home.html" target="_blank">Home</a>
+			<a href="http://127.0.0.1:3000/Notes/7%20Feb/About.html" target="_blank">About us</a>
+			<a href="http://127.0.0.1:3000/Notes/7%20Feb/Contact us.html">Contact us</a>
+		</nav>
+	</header>
+	<h1>3 random audios</h1>
+	<audio src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" controls></audio>
+	<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio>
+	<audio src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" controls></audio>
 </body>
 
 </html>
