--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 	<nav>
 			<a href="http://127.0.0.1:3000/Notes/7%20Feb/Home.html" target="_blank">Home</a>
 			<a href="http://127.0.0.1:3000/Notes/7%20Feb/About.html" target="_blank">About us</a>
-			<a href="http://127.0.0.1:3000/Notes/7%20Feb/Contact us.html">Contact us</a>
+			<a href="http://127.0.0.1:3000/Notes/7%20Feb/Contact us.html" target="_blank">Contact us</a>
 	</nav>
 	<h1>3 random audios</h1>
 	<audio src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" controls></audio>
