--- a/main.html
+++ b/main.html
@@ -13,9 +13,9 @@
 
 	<nav>
 		<ul>
-			<a href="http://127.0.0.1:3000/Notes/7%20Feb/Home.html" target="_blank">Home</a>
-			<a href="http://127.0.0.1:3000/Notes/7%20Feb/About.html" target="_blank">About us</a>
-			<a href="http://127.0.0.1:3000/Notes/7%20Feb/Contact us.html" target="_blank">Contact us</a>
+			<li><a href="http://127.0.0.1:3000/Notes/7%20Feb/Home.html" target="_blank">Home</a></li>
+			<li><a href="http://127.0.0.1:3000/Notes/7%20Feb/About.html" target="_blank">About us</a></li>
+			<li><a href="http://127.0.0.1:3000/Notes/7%20Feb/Contact us.html" target="_blank">Contact us</a></li>
 		</ul>
 	</nav>
 	<h1>3 random audios</h1>	
